--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,33 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
+    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.1'
-
+    - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
     - name: Install Dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Generate Application Key
+      run: composer update
+    - name: Generate key
       run: php artisan key:generate
-
-    - name: Set Permissions
-      run: |
-        chmod -R 775 storage bootstrap/cache
-        chown -R $USER:$USER storage bootstrap/cache
-
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
-
-    - name: Execute Tests
+    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
